# Swarlaya-Music

./: .dockerignore  Dockerfile  README.md  add_server_route_mock.py  app.js  append_js.py  docker-compose.yml  files_list.txt  index.html  inject_audio.py  inject_notation_css.py  inject_notation_html.py  manifest.json  out.txt  pitch_shift_fallback.py  render.yaml  requirements.txt  server.py  startup.sh  style.css  sw.js  test.js
cpp_sidecar/: main.cpp
drogon_server/: CMakeLists.txt  config.json  main.cpp
drogon_server/controllers/: AudioController.cpp  AudioController.hpp  StaticController.cpp  StaticController.hpp  StemController.cpp  StemController.hpp
drogon_server/models/: JobStore.cpp  JobStore.hpp
drogon_server/services/: AudioProcessorService.cpp  AudioProcessorService.hpp  JobWorkerPool.cpp  JobWorkerPool.hpp
drogon_server/utils/: FileLockManager.hpp  Security.cpp  Security.hpp  Subprocess.cpp  Subprocess.hpp  ZipUtils.cpp  ZipUtils.hpp
public/css/: style.css
public/js/: app.js  catalogue.js  notation.js
public/separator/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
public/separator/404/: index.html
public/separator/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
scripts/: add_server_route.py  create_notation_js.py  fix_nav.py  fix_upload.py  inject_html2pdf.py  inject_phase2.py  inject_phase3.py
stem-frontend/: package.json
stem-frontend/src/app/: globals.css  layout.tsx  (+1 more)
(+5 files in other folders)
